crates/gridwell-writer-typst/tests/snapshots/snapshots__unicode-rtl.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[الاسم]],
    [#text(weight: "bold")[القيمة]],
    table.hline(stroke: 0.5pt),
  ),
  [مرحبا],
  [١٢٣],
  [שלום],
  [456],
)
