crates/gridwell-writer-typst/tests/snapshots/snapshots__wide-50-cols.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto, auto,),
  align: (left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[c0]],
    [#text(weight: "bold")[c1]],
    [#text(weight: "bold")[c2]],
    [#text(weight: "bold")[c3]],
    [#text(weight: "bold")[c4]],
    [#text(weight: "bold")[c5]],
    [#text(weight: "bold")[c6]],
    [#text(weight: "bold")[c7]],
    [#text(weight: "bold")[c8]],
    [#text(weight: "bold")[c9]],
    [#text(weight: "bold")[c10]],
    [#text(weight: "bold")[c11]],
    [#text(weight: "bold")[c12]],
    [#text(weight: "bold")[c13]],
    [#text(weight: "bold")[c14]],
    [#text(weight: "bold")[c15]],
    [#text(weight: "bold")[c16]],
    [#text(weight: "bold")[c17]],
    [#text(weight: "bold")[c18]],
    [#text(weight: "bold")[c19]],
    [#text(weight: "bold")[c20]],
    [#text(weight: "bold")[c21]],
    [#text(weight: "bold")[c22]],
    [#text(weight: "bold")[c23]],
    [#text(weight: "bold")[c24]],
    [#text(weight: "bold")[c25]],
    [#text(weight: "bold")[c26]],
    [#text(weight: "bold")[c27]],
    [#text(weight: "bold")[c28]],
    [#text(weight: "bold")[c29]],
    [#text(weight: "bold")[c30]],
    [#text(weight: "bold")[c31]],
    [#text(weight: "bold")[c32]],
    [#text(weight: "bold")[c33]],
    [#text(weight: "bold")[c34]],
    [#text(weight: "bold")[c35]],
    [#text(weight: "bold")[c36]],
    [#text(weight: "bold")[c37]],
    [#text(weight: "bold")[c38]],
    [#text(weight: "bold")[c39]],
    [#text(weight: "bold")[c40]],
    [#text(weight: "bold")[c41]],
    [#text(weight: "bold")[c42]],
    [#text(weight: "bold")[c43]],
    [#text(weight: "bold")[c44]],
    [#text(weight: "bold")[c45]],
    [#text(weight: "bold")[c46]],
    [#text(weight: "bold")[c47]],
    [#text(weight: "bold")[c48]],
    [#text(weight: "bold")[c49]],
    table.hline(stroke: 0.5pt),
  ),
  [0],
  [1],
  [2],
  [3],
  [4],
  [5],
  [6],
  [7],
  [8],
  [9],
  [10],
  [11],
  [12],
  [13],
  [14],
  [15],
  [16],
  [17],
  [18],
  [19],
  [20],
  [21],
  [22],
  [23],
  [24],
  [25],
  [26],
  [27],
  [28],
  [29],
  [30],
  [31],
  [32],
  [33],
  [34],
  [35],
  [36],
  [37],
  [38],
  [39],
  [40],
  [41],
  [42],
  [43],
  [44],
  [45],
  [46],
  [47],
  [48],
  [49],
  [100],
  [101],
  [102],
  [103],
  [104],
  [105],
  [106],
  [107],
  [108],
  [109],
  [110],
  [111],
  [112],
  [113],
  [114],
  [115],
  [116],
  [117],
  [118],
  [119],
  [120],
  [121],
  [122],
  [123],
  [124],
  [125],
  [126],
  [127],
  [128],
  [129],
  [130],
  [131],
  [132],
  [133],
  [134],
  [135],
  [136],
  [137],
  [138],
  [139],
  [140],
  [141],
  [142],
  [143],
  [144],
  [145],
  [146],
  [147],
  [148],
  [149],
  [200],
  [201],
  [202],
  [203],
  [204],
  [205],
  [206],
  [207],
  [208],
  [209],
  [210],
  [211],
  [212],
  [213],
  [214],
  [215],
  [216],
  [217],
  [218],
  [219],
  [220],
  [221],
  [222],
  [223],
  [224],
  [225],
  [226],
  [227],
  [228],
  [229],
  [230],
  [231],
  [232],
  [233],
  [234],
  [235],
  [236],
  [237],
  [238],
  [239],
  [240],
  [241],
  [242],
  [243],
  [244],
  [245],
  [246],
  [247],
  [248],
  [249],
)
